--- a/01_Anemia_Diagnosis_Prediction/01_Anemia_Diagnosis_Prediction.ipynb
+++ b/01_Anemia_Diagnosis_Prediction/01_Anemia_Diagnosis_Prediction.ipynb
@@ -43,7 +43,7 @@
    "id": "40257288-0b91-4484-be2b-a40ca56c7953",
    "metadata": {},
    "source": [
-    "## Preprocessing and Exploratory Data Analysis"
+    "## Pre-processing and Exploratory Data Analysis"
    ]
   },
   {
