--- a/02_Lung_Cancer_Prediction/02_Lung_Cancer_Prediction.ipynb
+++ b/02_Lung_Cancer_Prediction/02_Lung_Cancer_Prediction.ipynb
@@ -43,7 +43,7 @@
    "id": "d163e3a3-0efa-457d-b51f-d99c722b84df",
    "metadata": {},
    "source": [
-    "## Preprocessing and Exploratory Data Analysis"
+    "## Pre-processing and Exploratory Data Analysis"
    ]
   },
   {
